Complete PRD task T037: Update branding logo and site name

--- a/frontend/client/index.html
+++ b/frontend/client/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>IACS DevOps Lab - Industrial Automation Engineering Hub</title>
+    <title>IACS DevOps Labs and Experiments - Industrial Automation Engineering Hub</title>
     <meta name="description" content="A comprehensive hub for industrial automation engineers featuring technical blogs, hands-on protocol labs, and tool documentation for Modbus, CIP, OPC UA, MQTT, S7, DNP3, and IEC 104." />
-    <meta property="og:title" content="IACS DevOps Lab - Industrial Automation Engineering Hub" />
+    <meta property="og:title" content="IACS DevOps Labs and Experiments - Industrial Automation Engineering Hub" />
     <meta property="og:description" content="Technical posts, hands-on protocol testing labs, tool documentation, and how-to guides for industrial automation engineers." />
     <meta property="og:type" content="website" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
